--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Proof of concept to explore fancy conflict resolution for images",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gemini-update": "npm run verify-webdriver-running && gemini update test.js",
+    "gemini-test": "npm run verify-webdriver-running && gemini test test.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
+    "webdriver-start": "xvfb-run webdriver-manager start",
+    "webdriver-update": "webdriver-manager update"
   },
   "author": "Todd Wolfson <todd@twolfson.com> (http://twolfson.com/)",
   "license": "Unlicense",
   "dependencies": {
     "express": "~4.14.0",
     "gemini": "~4.12.2",
-    "jade": "~1.11.0"
+    "jade": "~1.11.0",
+    "webdriver-manager": "~10.0.1"
   }
 }
