--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "gemini-update": "npm run verify-webdriver-running && gemini update gemini.js",
-    "gemini-test": "npm run verify-webdriver-running && gemini test gemini.js",
-    "start": "node server.js",
+    "gemini-test": "npm run verify-webdriver-running && gemini test --reporter html --reporter flat gemini.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
     "webdriver-start": "xvfb-run webdriver-manager start",
