--- a/package.json
+++ b/package.json
@@ -1,22 +1,53 @@
 {
-  "name": "gist-gemini-fancy",
+  "name": "multi-image-mergetool",
+  "description": "Resolve multiple image conflicts at the same time",
   "version": "1.0.0",
-  "description": "Proof of concept to explore fancy conflict resolution for images",
-  "main": "index.js",
-  "scripts": {
-    "gemini-update": "npm run verify-webdriver-running && gemini update gemini.js",
-    "gemini-test": "npm run verify-webdriver-running && gemini test --reporter html --reporter flat gemini.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
-    "webdriver-start": "xvfb-run webdriver-manager start",
-    "webdriver-update": "webdriver-manager update"
+  "homepage": "https://github.com/twolfson/multi-image-mergetool",
+  "author": {
+    "name": "Todd Wolfson",
+    "email": "todd@twolfson.com",
+    "url": "http://twolfson.com/"
   },
-  "author": "Todd Wolfson <todd@twolfson.com> (http://twolfson.com/)",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/twolfson/multi-image-mergetool.git"
+  },
+  "bugs": {
+    "url": "https://github.com/twolfson/multi-image-mergetool/issues"
+  },
+  "main": "lib/multi-image-mergetool",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "license": "Unlicense",
-  "dependencies": {
-    "express": "~4.14.0",
-    "gemini": "~4.12.2",
-    "jade": "~1.11.0",
-    "webdriver-manager": "~10.2.4"
+  "scripts": {
+    "precheck": "twolfson-style precheck lib/ test/",
+    "lint": "twolfson-style lint lib/ test/",
+    "pretest": "twolfson-style install",
+    "test": "npm run precheck && mocha --reporter dot && npm run lint"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "foundry": "~4.0.3",
+    "foundry-release-git": "~2.0.2",
+    "foundry-release-npm": "~2.0.2",
+    "jscs": "~1.7.3",
+    "jshint": "~2.5.10",
+    "mocha": "~1.11.0",
+    "twolfson-style": "~1.6.0"
+  },
+  "keywords": [
+    "image",
+    "merge",
+    "mergetool",
+    "diff",
+    "visual",
+    "testing"
+  ],
+  "foundry": {
+    "releaseCommands": [
+      "foundry-release-git",
+      "foundry-release-npm"
+    ]
   }
 }
