--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "webdriver-update": "webdriver-manager update"
   },
   "dependencies": {
+    "async": "~2.1.2",
     "commander": "~2.9.0",
     "express": "~4.14.0",
+    "glob": "~7.1.1",
     "jade": "~1.11.0",
     "opener": "~1.4.2"
   },
