Fixed up mkdirp issue

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "glob": "~7.1.1",
     "jade": "~1.11.0",
     "looks-same": "~3.0.0",
+    "mkdirp": "~0.5.1",
     "opener": "~1.4.2",
     "tmp": "0.0.29"
   },
