--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "async": "~2.1.2",
+    "body-parser": "~1.15.2",
     "chalk": "~1.1.3",
     "commander": "~2.9.0",
     "express": "~4.14.0",
