--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "commander": "~2.9.0",
     "express": "~4.14.0",
     "glob": "~7.1.1",
+    "http-errors": "~1.5.0",
     "jade": "~1.11.0",
     "looks-same": "~3.0.0",
     "mkdirp": "~0.5.1",
