--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "body-parser": "~1.15.2",
     "chalk": "~1.1.3",
     "commander": "~2.9.0",
+    "data-uri-to-buffer": "0.0.4",
     "express": "~4.14.0",
     "glob": "~7.1.1",
     "http-errors": "~1.5.0",
