--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "precheck": "twolfson-style precheck lib/ test/",
     "lint": "twolfson-style lint lib/ test/",
     "pretest": "twolfson-style install",
+    "start": "node bin/multi-image-mergetool",
     "test": "npm run precheck && mocha --reporter dot && npm run lint",
     "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
     "webdriver-start": "xvfb-run webdriver-manager start",
