--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 sudo: false
 language: node_js
 node_js:
-  - "4.1"
+  - "6"
+  - "5"
+  - "4"
   - "0.12"
-  - "0.11"
   - "0.10"
 matrix:
   allow_failures:
-    - node_js: "0.11"
+    - node_js: "5"
 
 before_install:
   - curl --location http://rawgit.com/twolfson/fix-travis-ci/master/lib/install.sh | bash -s
 
 notifications:
-  email: false
+  email:
+    recipients:
+      - todd@twolfson.com
+    on_success: change
+    on_failure: change
