--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
   "scripts": {
     "gemini-update": "npm run verify-webdriver-running && gemini update gemini.js",
     "gemini-test": "npm run verify-webdriver-running && gemini test --reporter html --reporter flat gemini.js",
-    "precheck": "twolfson-style precheck lib/ test/",
     "lint": "twolfson-style lint lib/ test/",
-    "pretest": "twolfson-style install",
     "start": "node bin/multi-image-mergetool",
-    "test": "npm run precheck && mocha --reporter dot && npm run lint",
+    "test": "mocha --reporter dot test/*.js && npm run lint",
     "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
     "webdriver-start": "xvfb-run webdriver-manager start",
     "webdriver-update": "webdriver-manager update"
