--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "gemini": "~4.12.2",
     "jscs": "~3.0.7",
     "jshint": "~2.9.4",
+    "karma": "~1.3.0",
+    "karma-mocha": "~1.2.0",
+    "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~1.11.0",
     "twolfson-style": "~1.6.0",
     "webdriver-manager": "~10.2.4"
