--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gemini-test": "npm run verify-webdriver-running && gemini test --reporter html --reporter flat gemini.js",
     "lint": "twolfson-style lint lib/ test/",
     "start": "node bin/multi-image-mergetool",
-    "test": "mocha --reporter dot test/*.js && npm run lint",
+    "test": "npm run test-karma && npm run lint",
+    "test-karma": "karma start --single-run",
     "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
     "webdriver-start": "xvfb-run webdriver-manager start",
     "webdriver-update": "webdriver-manager update"
