--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "gemini-test": "npm run verify-webdriver-running && gemini test --reporter html --reporter flat gemini.js",
     "lint": "twolfson-style lint lib/ test/",
     "start": "node bin/multi-image-mergetool",
-    "test": "npm run test-karma && npm run lint",
-    "test-karma": "karma start --single-run",
+    "test": "npm run test-karma-single && npm run lint",
+    "test-karma-continuous": "karma start --no-single-run",
+    "test-karma-single": "karma start",
     "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
     "webdriver-start": "xvfb-run webdriver-manager start",
     "webdriver-update": "webdriver-manager update"
@@ -50,6 +51,7 @@
     "tmp": "0.0.29"
   },
   "devDependencies": {
+    "browserify": "~13.1.1",
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
     "foundry-release-npm": "~2.0.2",
@@ -57,10 +59,12 @@
     "jscs": "~3.0.7",
     "jshint": "~2.9.4",
     "karma": "~1.3.0",
+    "karma-browserify": "~5.1.0",
     "karma-mocha": "~1.2.0",
     "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~1.11.0",
     "twolfson-style": "~1.6.0",
+    "watchify": "~3.7.0",
     "webdriver-manager": "~10.2.4"
   },
   "keywords": [
