--- a/package.json
+++ b/package.json
@@ -38,17 +38,21 @@
   "dependencies": {
     "async": "~2.1.2",
     "body-parser": "~1.15.2",
+    "bootstrap": "~3.3.7",
     "chalk": "~1.1.3",
     "commander": "~2.9.0",
     "data-uri-to-buffer": "0.0.4",
+    "domo": "~0.5.9",
     "express": "~4.14.0",
     "glob": "~7.1.1",
     "http-errors": "~1.5.0",
     "jade": "~1.11.0",
+    "jquery": "~3.1.1",
     "looks-same": "~3.0.0",
     "mkdirp": "~0.5.1",
     "opener": "~1.4.2",
-    "tmp": "0.0.29"
+    "tmp": "0.0.29",
+    "unidragger": "~2.1.0"
   },
   "devDependencies": {
     "browserify": "~13.1.1",
