--- a/package.json
+++ b/package.json
@@ -38,28 +38,32 @@
   "dependencies": {
     "async": "~2.1.2",
     "body-parser": "~1.15.2",
-    "bootstrap": "~3.3.7",
     "chalk": "~1.1.3",
     "commander": "~2.9.0",
     "data-uri-to-buffer": "0.0.4",
-    "domo": "~0.5.9",
     "express": "~4.14.0",
     "glob": "~7.1.1",
     "http-errors": "~1.5.0",
     "jade": "~1.11.0",
-    "jquery": "~3.1.1",
     "looks-same": "~3.0.0",
     "mkdirp": "~0.5.1",
     "opener": "~1.4.2",
-    "tmp": "0.0.29",
-    "unidragger": "~2.1.0"
+    "tmp": "0.0.29"
   },
   "devDependencies": {
+    "bootstrap": "~3.3.7",
     "browserify": "~13.1.1",
+    "domo": "~0.5.9",
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
     "foundry-release-npm": "~2.0.2",
     "gemini": "~4.12.2",
+    "gulp": "~3.9.1",
+    "gulp-buffer": "0.0.2",
+    "gulp-livereload": "~3.8.1",
+    "gulp-notify": "~2.2.0",
+    "gulp-sourcemaps": "~2.2.0",
+    "jquery": "~3.1.1",
     "jscs": "~3.0.7",
     "jshint": "~2.9.4",
     "karma": "~1.3.0",
@@ -67,7 +71,10 @@
     "karma-mocha": "~1.2.0",
     "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~1.11.0",
+    "rimraf": "~2.5.4",
     "twolfson-style": "~1.6.0",
+    "unidragger": "~2.1.0",
+    "vinyl-source-stream": "~1.1.0",
     "watchify": "~3.7.0",
     "webdriver-manager": "~10.2.4"
   },
