--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "bootstrap": "~3.3.7",
     "browserify": "~13.1.1",
+    "chai": "~3.5.0",
     "domo": "~0.5.9",
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
