--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "twolfson-style lint lib/ test/",
     "prepublish": "npm run build",
     "start": "node bin/multi-image-mergetool",
-    "test": "npm run test-karma-single && npm run lint",
+    "test": "npm run test-karma-single && npm run lint && npm run build",
     "test-karma-continuous": "karma start --no-single-run",
     "test-karma-single": "karma start",
     "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
