--- a/package.json
+++ b/package.json
@@ -26,16 +26,11 @@
   "scripts": {
     "build": "gulp build",
     "develop": "gulp develop",
-    "gemini-update": "npm run verify-webdriver-running && gemini update gemini.js",
-    "gemini-test": "npm run verify-webdriver-running && gemini test --reporter html --reporter flat gemini.js",
     "lint": "twolfson-style lint browser/ server/ test/",
     "start": "node bin/multi-image-mergetool",
     "test": "npm run test-karma-single && npm run lint && npm run build",
     "test-karma-continuous": "karma start --no-single-run",
-    "test-karma-single": "karma start",
-    "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
-    "webdriver-start": "xvfb-run webdriver-manager start",
-    "webdriver-update": "webdriver-manager update"
+    "test-karma-single": "karma start"
   },
   "dependencies": {
     "async": "~2.1.2",
