--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "async": "~2.1.2",
     "body-parser": "~1.15.2",
     "chalk": "~1.1.3",
-    "commander": "~2.9.0",
     "data-uri-to-buffer": "0.0.4",
     "express": "~4.14.0",
     "glob": "~7.1.1",
@@ -46,7 +45,8 @@
     "mkdirp": "~0.5.1",
     "opener": "~1.4.2",
     "tmp": "0.0.29",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "yargs": "~6.3.0"
   },
   "devDependencies": {
     "bootstrap": "~3.3.7",
