--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ node_js:
 matrix:
   allow_failures:
     - node_js: "5"
+  # Add a build with screenshot uploads for Node.js@6
+  include:
+    - node_js: "6"
+      env: UPLOAD_RESULTS="TRUE"
 
 # Set up g++ dependencies for png-img
 # https://github.com/gemini-testing/gemini/blob/v4.13.4/.travis.yml#L12
@@ -24,6 +28,10 @@ addons:
 
 before_install:
   - curl --location http://rawgit.com/twolfson/fix-travis-ci/master/lib/install.sh | bash -s
+
+script:
+  # Run tests (upon failure, upload to Imgur)
+  - 'npm test || ((test "$UPLOAD_RESULTS" = "TRUE" && bin/test-browser-upload-screenshots.sh) && exit 1)'
 
 notifications:
   email:
