--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lint": "twolfson-style lint browser/ server/ test/",
     "start-gemini": "node bin/multi-image-mergetool --loader gemini",
     "pretest": "rm -r test/browser/actual-screenshots &> /dev/null || true",
-    "test": "npm run test-karma-single && npm run lint && npm run build",
+    "_test-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
+    "test": "npm run build && npm run test-karma-single && npm run lint",
     "test-karma-continuous": "karma start --no-single-run",
     "test-karma-single": "karma start",
     "test-karma-assert-screenshots": "bin/test-browser-assert-screenshots.sh"
