--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ node_js:
 matrix:
   allow_failures:
     - node_js: "5"
-  # Add a build with screenshot uploads for Node.js@6
-  include:
-    - node_js: "6"
-      env: UPLOAD_RESULTS="TRUE"
+  # # Add a build with screenshot uploads for Node.js@6
+  # include:
+  #   - node_js: "6"
+  #     env: UPLOAD_RESULTS="TRUE"
 
 # Set up g++ dependencies for png-img
 # https://github.com/gemini-testing/gemini/blob/v4.13.4/.travis.yml#L12
