--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jshint": "~2.9.4",
     "karma": "~1.3.0",
     "karma-browserify": "~5.1.0",
+    "karma-chrome-launcher": "~2.0.0",
     "karma-mocha": "~1.2.0",
     "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~3.1.2",
