--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "lint": "twolfson-style lint browser/ server/ test/",
     "start-gemini": "node bin/multi-image-mergetool --loader gemini",
     "pretest": "rm -r test/browser/actual-screenshots &> /dev/null || true",
-    "_test-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
-    "test": "npm run build && npm run test-karma-single && npm run lint",
+    "test": "npm run test-browser && npm run test-server && npm run lint",
+    "_test-browser-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
+    "test-browser": "npm run build && npm run test-karma-single",
+    "test-browser-assert-screenshots": "bin/test-browser-assert-screenshots.sh",
     "test-karma-continuous": "karma start --no-single-run",
     "test-karma-single": "karma start",
-    "test-karma-assert-screenshots": "bin/test-browser-assert-screenshots.sh"
+    "test-server": "mocha test/server"
   },
   "dependencies": {
     "async": "~2.1.2",
