Completed our first set of tests

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "brfs": "~1.4.3",
     "browserify": "~13.1.1",
     "chai": "~3.5.0",
+    "cheerio": "~0.22.0",
     "domo": "~0.5.9",
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
@@ -75,6 +76,7 @@
     "karma-mocha": "~1.2.0",
     "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~3.1.2",
+    "request": "~2.78.0",
     "rimraf": "~2.5.4",
     "simulant": "~0.2.2",
     "tween.js": "~16.3.5",
