--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "_test-browser-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
     "test-browser": "npm run build && npm run test-karma-single",
     "test-browser-assert-screenshots": "bin/test-browser-assert-screenshots.sh",
-    "test-karma-continuous": "xvfb-run karma start --no-single-run",
-    "test-karma-single": "xvfb-run karma start",
+    "test-karma-continuous": "karma start --no-single-run",
+    "test-karma-single": "karma start",
     "test-server": "mocha test/server"
   },
   "dependencies": {
@@ -72,7 +72,6 @@
     "jshint": "~2.9.4",
     "karma": "~1.3.0",
     "karma-browserify": "~5.1.0",
-    "karma-firefox-launcher": "~1.0.0",
     "karma-mocha": "~1.2.0",
     "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~3.1.2",
