--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "pretest": "rm -r test/browser/actual-screenshots &> /dev/null || true",
     "test": "npm run test-browser && npm run test-server && npm run lint",
     "_test-browser-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
-    "test-browser": "npm run build && npm run test-karma-single",
+    "test-browser": "npm run build && npm run test-karma-single && bin/test-assert-docs-screenshot-up-to-date.sh",
     "test-browser-assert-screenshots": "bin/test-browser-assert-screenshots.sh",
     "test-karma-continuous": "karma start --no-single-run",
     "test-karma-single": "karma start",
