--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "yargs": "~6.3.0"
   },
   "devDependencies": {
+    "benchmark": "~2.1.2",
     "bootstrap": "~3.3.7",
     "brfs": "~1.4.3",
     "browserify": "~13.1.1",
