--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "sinon": "~1.17.6",
     "tween.js": "~16.3.5",
     "twolfson-style": "~1.6.0",
+    "ua-parser-js": "~0.7.12",
     "unidragger": "~2.1.0",
     "vinyl-source-stream": "~1.1.0",
     "watchify": "~3.7.0",
