--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "_test-browser-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
     "test-browser": "npm run build && npm run test-karma-single && bin/test-assert-docs-screenshot-up-to-date.sh",
     "test-browser-assert-screenshots": "bin/test-browser-assert-screenshots.sh",
-    "test-karma-continuous": "xvfb-maybe karma start --no-single-run",
-    "test-karma-single": "xvfb-maybe karma start",
+    "_test-karma-comment": "`xvfb-maybe` checks for DISPLAY environment variable but we hate non-headless browsers so we always shut it off",
+    "test-karma-continuous": "DISPLAY=\"\" xvfb-maybe karma start --no-single-run",
+    "test-karma-single": "DISPLAY=\"\" xvfb-maybe karma start",
     "test-server": "mocha test/server"
   },
   "dependencies": {
