--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ addons:
     packages:
     - gcc-4.8
     - g++-4.8
-    # Install Firefox for Karma tests
-    - firefox
+  # Install Firefox for Karma tests
+  # https://docs.travis-ci.com/user/firefox/#Version-aliases
+  firefox: latest
 
 before_install:
   - curl --location http://rawgit.com/twolfson/fix-travis-ci/master/lib/install.sh | bash -s
