--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "async": "~2.1.2",
     "body-parser": "~1.15.2",
-    "chalk": "~1.1.3",
+    "cli-spinners": "~1.0.0",
     "data-uri-to-buffer": "0.0.4",
     "express": "~4.14.0",
     "glob": "~7.1.1",
@@ -49,6 +49,7 @@
     "jade": "~1.11.0",
     "looks-same": "~3.0.0",
     "mkdirp": "~0.5.1",
+    "multispinner": "~0.2.1",
     "opener": "~1.4.2",
     "tmp": "0.0.29",
     "underscore": "~1.8.3",
