--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ npm-debug.log
 .npmignore
 /test/browser/actual-screenshots/
 /test/browser/diff-screenshots/
-/test/browser/expected-screenshots/
+/test/browser/expected-screenshots/*
+!/test/browser/expected-screenshots/contents.sha256
 /test/test-files/tmp/
 
 # Debug directories for visual tests
