Renamed test-browser-assert-screenshots to more clear utility

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "pretest": "rm -r test/browser/actual-screenshots &> /dev/null || true",
     "test": "npm run test-browser && npm run test-server && npm run lint",
     "_test-browser-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
-    "test-browser": "npm run build && npm run test-karma-single && bin/test-assert-docs-screenshot-up-to-date.sh",
-    "test-browser-assert-screenshots": "bin/test-browser-assert-screenshots.sh",
+    "test-browser": "npm run build && npm run test-karma-single && bin/test-assert-screenshot-hashes.sh && bin/test-assert-docs-screenshot-up-to-date.sh",
+    "test-browser-mergetool-screenshots": "bin/test-browser-mergetool-screenshots.sh",
     "_test-karma-comment": "`xvfb-maybe` checks for DISPLAY environment variable but we hate non-headless browsers so we always shut it off",
     "test-karma-continuous": "DISPLAY=\"\" xvfb-maybe karma start --no-single-run",
     "test-karma-single": "DISPLAY=\"\" xvfb-maybe karma start",
