--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test-browser-mergetool-screenshots": "bin/test-browser-mergetool-screenshots.sh",
     "_test-karma-comment": "`xvfb-maybe` checks for DISPLAY environment variable but we hate non-headless browsers so we always shut it off",
     "test-karma-continuous": "DISPLAY=\"\" xvfb-maybe karma start --no-single-run",
+    "test-karma-develop": "nodemon -x \"DISPLAY=\\\"\\\" xvfb-maybe karma start --browsers PhantomJSScreenshot && echo hi\"",
     "test-karma-single": "DISPLAY=\"\" xvfb-maybe karma start",
     "test-server": "mocha test/server"
   },
@@ -80,6 +81,7 @@
     "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~3.1.2",
     "ndarray-fill": "~1.0.1",
+    "nodemon": "~1.11.0",
     "request": "~2.78.0",
     "rimraf": "~2.5.4",
     "save-pixels": "~2.3.4",
