--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "mocha": "~3.1.2",
     "ndarray-fill": "~1.0.1",
     "nodemon": "~1.11.0",
+    "pngjs": "~3.0.0",
     "request": "~2.78.0",
     "rimraf": "~2.5.4",
     "save-pixels": "~2.3.4",
