--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "gulp-livereload": "~3.8.1",
     "gulp-notify": "~2.2.0",
     "gulp-sourcemaps": "~2.2.0",
+    "hyperscript": "~2.0.2",
+    "hyperscript-helpers": "~3.0.2",
     "jquery": "~3.1.1",
     "jscs": "~3.0.7",
     "jshint": "~2.9.4",
