Completed transition onto Backbone

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "yargs": "~6.3.0"
   },
   "devDependencies": {
+    "backbone": "~1.3.3",
     "bootstrap": "~3.3.7",
     "brfs": "~1.4.3",
     "browserify": "~13.1.1",
