--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "test-karma-continuous": "DISPLAY=\"\" xvfb-maybe karma start --no-single-run",
     "test-karma-develop": "nodemon -x \"DISPLAY=\\\"\\\" xvfb-maybe karma start --browsers PhantomJSScreenshot && bin/test-browser-assert-screenshots-signature.sh\"",
     "test-karma-single": "DISPLAY=\"\" xvfb-maybe karma start",
-    "test-server": "mocha test/server"
+    "test-server": "mocha test/server",
+    "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
+    "webdriver-start": "xvfb-run webdriver-manager start",
+    "webdriver-update": "webdriver-manager update"
   },
   "dependencies": {
     "async": "~2.1.2",
@@ -96,6 +99,8 @@
     "unidragger": "~2.1.0",
     "vinyl-source-stream": "~1.1.0",
     "watchify": "~3.7.0",
+    "wd": "~1.1.1",
+    "webdriver-manager": "~10.3.0",
     "xvfb-maybe": "~0.1.3",
     "zeros": "~1.0.0"
   },
