--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
     "foundry-release-npm": "~2.0.2",
+    "function-to-string": "~0.2.0",
     "gulp": "~3.9.1",
     "gulp-buffer": "0.0.2",
     "gulp-livereload": "~3.8.1",
