--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "twolfson-style lint browser/ server/ test/",
     "start-gemini": "node bin/multi-image-mergetool --loader gemini",
     "pretest": "rm -r test/browser/actual-screenshots &> /dev/null || true",
+    "publish-demo": "npm run build-demo && git diff --exit-code && gh-pages --dist demo --branch gh-pages",
     "test": "npm run test-browser && npm run test-server && npm run lint",
     "_test-browser-comment": "We must run `npm build` before `npm run test-karma-single` so CSS is compiled for visibility tests",
     "test-browser": "npm run build && npm run test-karma-single && bin/test-browser-assert-screenshots-signature.sh && bin/test-assert-docs-screenshot-up-to-date.sh",
