--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "foundry-release-git": "~2.0.2",
     "foundry-release-npm": "~2.0.2",
     "function-to-string": "~0.2.0",
+    "gh-pages": "~0.11.0",
     "gulp": "~3.9.1",
     "gulp-buffer": "0.0.2",
     "gulp-livereload": "~3.8.1",
