--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test-karma-single": "DISPLAY=\"\" xvfb-maybe karma start",
     "test-server": "mocha test/server",
     "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
-    "webdriver-start": "xvfb-run webdriver-manager start",
+    "webdriver-start": "java -Dwebdriver.chrome.driver=\"$(node --print \"require.resolve('electron-chromedriver/bin/chromedriver')\")\" -jar /home/todd/github/multi-image-mergetool/node_modules/webdriver-manager/selenium/selenium-server-standalone-2.53.1.jar -port 4444",
     "webdriver-update": "webdriver-manager update"
   },
   "dependencies": {
@@ -69,6 +69,8 @@
     "buffered-spawn": "~3.3.2",
     "chai": "~3.5.0",
     "classnames": "~2.2.5",
+    "electron": "~1.4.13",
+    "electron-chromedriver": "~1.4.1",
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
     "foundry-release-npm": "~2.0.2",
