--- a/package.json
+++ b/package.json
@@ -39,10 +39,7 @@
     "test-karma-continuous": "DISPLAY=\"\" xvfb-maybe karma start --no-single-run",
     "test-karma-develop": "nodemon -x \"DISPLAY=\\\"\\\" xvfb-maybe karma start --browsers PhantomJSScreenshot && bin/test-browser-assert-screenshots-signature.sh\"",
     "test-karma-single": "DISPLAY=\"\" xvfb-maybe karma start",
-    "test-server": "mocha test/server",
-    "verify-webdriver-running": "curl --silent http://localhost:4444/ > /dev/null || (echo \"Webdriver isn't running, please start it via \\`npm run webdriver-start\\`\" 1>&2 && exit 1)",
-    "webdriver-start": "java -Dwebdriver.chrome.driver=\"$(node --print \"require.resolve('electron-chromedriver/bin/chromedriver')\")\" -jar /home/todd/github/multi-image-mergetool/node_modules/webdriver-manager/selenium/selenium-server-standalone-2.53.1.jar -port 4444",
-    "webdriver-update": "webdriver-manager update"
+    "test-server": "mocha test/server"
   },
   "dependencies": {
     "async": "~2.1.2",
@@ -70,11 +67,9 @@
     "chai": "~3.5.0",
     "classnames": "~2.2.5",
     "electron": "~1.4.13",
-    "electron-chromedriver": "~1.4.1",
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
     "foundry-release-npm": "~2.0.2",
-    "function-to-string": "~0.2.0",
     "gh-pages": "~0.11.0",
     "gulp": "~3.9.1",
     "gulp-buffer": "0.0.2",
@@ -105,8 +100,6 @@
     "unidragger": "~2.1.0",
     "vinyl-source-stream": "~1.1.0",
     "watchify": "~3.7.0",
-    "wd": "~1.1.1",
-    "webdriver-manager": "~10.3.0",
     "xvfb-maybe": "~0.1.3",
     "zeros": "~1.0.0"
   },
