--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "buffered-spawn": "~3.3.2",
     "chai": "~3.5.0",
     "classnames": "~2.2.5",
-    "electron": "~1.4.13",
     "foundry": "~4.0.3",
     "foundry-release-git": "~2.0.2",
     "foundry-release-npm": "~2.0.2",
@@ -88,6 +87,7 @@
     "karma-phantomjs-launcher": "~1.0.2",
     "mocha": "~3.1.2",
     "ndarray-fill": "~1.0.1",
+    "nightmare": "~2.9.1",
     "nodemon": "~1.11.0",
     "request": "~2.78.0",
     "rimraf": "~2.5.4",
