--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ node_js:
 matrix:
   allow_failures:
     - node_js: "5"
-  # Add a build with screenshot uploads for Node.js@6
-  include:
-    - node_js: "6"
-      env: UPLOAD_RESULTS="TRUE"
+  # # Add a build with screenshot uploads for Node.js@6
+  # include:
+  #   - node_js: "6"
+  #     env: UPLOAD_RESULTS="TRUE"
 
 # Set up g++ dependencies for png-img
 # https://github.com/gemini-testing/gemini/blob/v4.13.4/.travis.yml#L12
@@ -25,6 +25,12 @@ addons:
     packages:
     - gcc-4.8
     - g++-4.8
+    # Fonts for demo pages
+    - fonts-liberation
+    - gsfonts
+    - ttf-dejavu-core # Replacement for `fonts-dejavu-core`
+    - xfonts-base
+    - xfonts-encodings
   # Install Firefox for Karma tests
   # https://docs.travis-ci.com/user/firefox/#Version-aliases
   firefox: latest
