Added image loading in mock XHR

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "ndarray-fill": "~1.0.1",
     "nightmare": "git://github.com/twolfson/nightmare.git#716336f",
     "nodemon": "~1.11.0",
+    "pixelmatch": "~4.0.2",
     "request": "~2.78.0",
     "rimraf": "~2.5.4",
     "save-pixels": "~2.3.4",
